--- a/src/styles.css
+++ b/src/styles.css
@@ -145,3 +145,12 @@ h2
       background-color: #ddd;
       color: black;
   }
+
+  @media screen and (max-width: 768px) {
+    .board-container {
+        margin: 10px auto;
+        padding: 5px;
+        border-radius: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
+  }
